# agentic-mind

./: CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
entries/2026/02/27/: agents-switch-directories-and-write-to-the-wrong-repo.md  gemini-skills-proposal.md
plugins/beliefs/.claude-plugin/: plugin.json
plugins/browser-fetch/.claude-plugin/: plugin.json
plugins/checkpoint/.claude-plugin/: plugin.json
plugins/checkpoint/commands/: manage.md
plugins/curl/.claude-plugin/: plugin.json
plugins/entry/.claude-plugin/: plugin.json
plugins/gcalcli/.claude-plugin/: plugin.json
plugins/gcmd/.claude-plugin/: plugin.json
plugins/jirahhh/.claude-plugin/: plugin.json
plugins/meeting-notes/.claude-plugin/: plugin.json
plugins/meeting-notes/commands/: capture.md
plugins/meeting-prep/.claude-plugin/: plugin.json
plugins/meeting-prep/commands/: prep.md
plugins/shared-enterprise/.claude-plugin/: plugin.json
plugins/shared-enterprise/commands/: manage.md
plugins/slacker/.claude-plugin/: plugin.json
plugins/update-slack/.claude-plugin/: plugin.json
plugins/update-slack/commands/: update.md
